Mantis ChangeLog

2003.??.??  -  0.18.0a5

 * Enhancement: Show file attachment indicator on bug list page (#3088).
 * New config option(user_login_valid_regex): regular expression used to validate new login names
 * Fix: Improved adherance to the XHTML standard.
 * Fix: Allow spaces and hyphens in emails
 * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.
 * Fix #3027: History summary a little bit too wide in emails.
 * Fix #3064: view bug buttons in vertical column
 * Fix #3072: Attached file should be opened up in a new browser window.
 * Fix #3076: Bug reports are added to the "wrong" project.
 * Fix #3080: project menu bar shows extra links
 * Fix #3089: Hide link to Profiles management on account page based on access level.
 * Fix #3092: Problem changing printing prefs.
 * Fix #3108: No custom fields are shown in the details, if you are in "All Projects"
 * Fix #3109: Error when adding protected users.
 * Fix #3115: manage_proj_cat_edit_page.php uses the wrong project id.
 * Fix #3121: When creating a bug that has custom fields, the values for the custom fields are not sent out in the email.
 * Fix #3124: view_bugs: a reporter has the drop-down box of actions, but doesn't have the checkboxes.
 * Fix #3132: Email for feedback does not contain the last bugnote
 * Fix #3140: attachment.png is corrupt in CVS.
 * Fix #3143: Show a padlock instead of "p".
 * Fix #3155: Field 'date_added' (for attachments) not correctly printed in print_bug_page.php.
 * Languages: Updated Italian, Slovak and Dutch localisations.
 * Languages: Synchronised localisation files with English localisation.

2003.03.22  -  0.18.0a4

 * Check whether other forms of compression are enabled before we turn on ob_gzhandler() in our output handler.  This should hopefully avoid problems people have had with blank pages resulting from compression problems.
 * Remove "show source" functionality which was a security hole and of little use