@@ -9,11 +9,11 @@
 	###########################################################################
 	# English strings for Mantis
 	# -------------------------------------------------
-	# $Revision: 1.134 $
+	# $Revision: 1.135 $
 	# $Author: jfitzell $
-	# $Date: 2003-04-23 22:17:23 $
+	# $Date: 2003-04-23 23:00:36 $
 	#
-	# $Id: strings_english.txt,v 1.134 2003-04-23 22:17:23 jfitzell Exp $
+	# $Id: strings_english.txt,v 1.135 2003-04-23 23:00:36 jfitzell Exp $
 	###########################################################################
 ?>
 <?php
@@ -159,7 +159,7 @@
 	$MANTIS_ERROR[ERROR_FILE_TOO_BIG]       = 'File upload failed.  This is likely because the filesize was larger than is currently allowed by this PHP installation.';
 	$MANTIS_ERROR[ERROR_GPC_VAR_NOT_FOUND]  = 'A required parameter to this page was not found.';
 	$MANTIS_ERROR[ERROR_USER_NAME_NOT_UNIQUE]= 'That username is already being used.  Please go back and select another one.';
-	$MANTIS_ERROR[ERROR_CONFIG_OPT_NOT_FOUND]='Configuration option not found.';
+	$MANTIS_ERROR[ERROR_CONFIG_OPT_NOT_FOUND]='Configuration option \'%s\' not found.';
 	$MANTIS_ERROR[ERROR_LANG_STRING_NOT_FOUND]='String not found.';
 	$MANTIS_ERROR[ERROR_BUGNOTE_NOT_FOUND]  = 'Bugnote not found.';
 	$MANTIS_ERROR[ERROR_PROJECT_NOT_FOUND]  = 'Project not found.';
@@ -174,7 +174,7 @@
 	$MANTIS_ERROR[ERROR_USER_CREATE_PASSWORD_MISMATCH]='Password does not match verification.';
 	$MANTIS_ERROR[ERROR_GPC_ARRAY_EXPECTED]	= 'An array was expected but a string was received.';
 	$MANTIS_ERROR[ERROR_GPC_ARRAY_UNEXPECTED]='A string was expected but an array was received.';
-	$MANTIS_ERROR[ERROR_BUG_NOT_FOUND]	= 'Bug not found.';
+	$MANTIS_ERROR[ERROR_BUG_NOT_FOUND]	= 'Bug %d not found.';
 	$MANTIS_ERROR[ERROR_EMAIL_INVALID]	= 'Invalid email.';
 	$MANTIS_ERROR[ERROR_USER_PROFILE_NOT_FOUND]= 'Profile not found.';
 	$MANTIS_ERROR[ERROR_FILE_NOT_ALLOWED]	= 'File type not allowed for uploads.';
@@ -190,9 +190,9 @@
 	$MANTIS_ERROR[ERROR_LDAP_UPDATE_FAILED]	= 'LDAP Record Update has failed.';
 	$MANTIS_ERROR[ERROR_LDAP_USER_NOT_FOUND]= 'LDAP User Record Not Found.';
 	$MANTIS_ERROR[ERROR_BUG_RESOLVED_ACTION_DENIED]= 'The action cannot be performed because the bug has been resolved';
-	$MANTIS_ERROR[ERROR_DB_CONNECT_FAILED]	= 'Database connection failed.';
-	$MANTIS_ERROR[ERROR_DB_QUERY_FAILED]	= 'Database query failed.';
-	$MANTIS_ERROR[ERROR_DB_SELECT_FAILED]	= 'Database selection failed.';
+	$MANTIS_ERROR[ERROR_DB_CONNECT_FAILED]	= 'Database connection failed. Error received from database was #%d: %s';
+	$MANTIS_ERROR[ERROR_DB_QUERY_FAILED]	= 'Database query failed.  Error received from database was #%d: %s for the query: %s';
+	$MANTIS_ERROR[ERROR_DB_SELECT_FAILED]	= 'Database selection failed.  Error received from database was #%d: %s';
 	$MANTIS_ERROR[ERROR_CATEGORY_DUPLICATE] = 'A category with that name already exists.';
 	$MANTIS_ERROR[ERROR_CATEGORY_NO_ACTION] = 'No copy action was specified.';
 	$MANTIS_ERROR[ERROR_CATEGORY_NOT_FOUND] = 'Category not found.';
