@@ -4,6 +4,8 @@ Mantis ChangeLog
 
  * Enhancement: Show file attachment indicator on bug list page (#3088).
  * New config option(user_login_valid_regex): regular expression used to validate new login names
+ * Added error_proceed_url() to allow pages to give a url to proceed to after displaying the next error
+ * Enhancement: implemented parameterized error messages.  Error strings are passed through sprintf() and are parameterized with the values given to error_parameters()
  * Fix: Improved adherance to the XHTML standard.
  * Fix: Allow spaces and hyphens in emails
  * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.
